@@ -1,0 +1,11 @@
+-q 
+-l=0 
+-i=2 
+-bt=2 
+-pt=2 
+-sbt=2
+-ce
+-novalign
+-sot
+-nbbb
+-nbbc
