@@ -8,14 +8,61 @@ finder = :ExecFiles
 finder = :TestFiles
 skip = \.xlsx?$
 
-[@DOY]
-:version = 0.15
-dist = Spreadsheet-ParseXLSX
-repository = github
-Test::NoTabs_script_finder = NonBinaryScriptFiles
+[Prereqs / TestMoreDoneTesting]
+-phase = test
+-type = requires
+Test::More = 0.88
+ 
+[GatherDir]
+[PruneCruft]
+[ManifestSkip]
+[MetaYAML]
+[License]
+[Readme]
+[ExtraTests]
+[ExecDir]
+[ShareDir]
+[MakeMaker]
+[Manifest]
+[TestRelease]
+[ConfirmRelease]
+[MetaConfig]
+[MetaJSON]
+[NextRelease]
+format = %-5v %{yyyy-MM-dd}d
+[CheckChangesHasContent]
+[Test::NoTabs]
+[Test::EOL]
+[Test::Compile]
+[Test::Perl::Critic]
+critic_config = .perlcriticrc
+[PodCoverageTests]
+[PodSyntaxTests]
+[MetaResources]
+[Git::Check]
+allow_dirty =
+[Git::Commit]
+commit_msg = changelog
+[Git::Tag]
+tag_format = %v
+tag_message =
 
+[Git::NextVersion]
+version_regexp = ^(\d+\.\d+)$
+first_version = 0.28
+
+[Git::Contributors]
+[OurPkgVersion]
+[PodWeaver]
+[ReadmeAnyFromPod]
+type = gfm
+location = root
+filename = README.md
+[UploadToCPAN]
+[MetaProvides::Package]
 [AutoPrereqs]
-
 [Encoding]
 match = ^t/data/
 encoding = bytes
+
+
