@@ -1,0 +1,29 @@
+[@CorePrep]
+ 
+[-SingleEncoding]
+ 
+[Name]
+[Version]
+ 
+[Region  / prelude]
+ 
+[Generic / SYNOPSIS]
+[Generic / DESCRIPTION]
+[Generic / OVERVIEW]
+ 
+[Collect / ATTRIBUTES]
+command = attr
+ 
+[Collect / METHODS]
+command = method
+ 
+[Collect / FUNCTIONS]
+command = func
+ 
+[Leftovers]
+ 
+[Region  / postlude]
+ 
+[Authors]
+[Contributors]
+[Legal]
